css/style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body{
  height: 100vh;
  font-family: 'Montserrat', sans-serif;
}

main{
  height: calc(100% - 80px);
  background-color: #141922;
  display: flex;
  width: 100%;
}

aside{
  height: 100%;
  width: 200px;
  background-color: #000;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

a{
  text-decoration: none;
}

/* Mix */
.white-txt{
  color: #fff;
  font-weight: bold;
}

.grey-txt{
  color: #666666;
  font-weight: bold;
}

.row{
  display: flex;
  align-items: center;
}

aside p{
  font-size: 14px;
}

aside p:hover,
.column li:hover{
  color: #fff;
  cursor: pointer;
}
/* Mix */

/* Logo */
.logo{
  display: flex;
  align-items: center;
}

.logo .fa-spotify{
  font-size: 40px;
  padding: 10px;
}

.logo .logo-text{
  font-size: 20px;
}
/* /Logo */

/* Top Navbar */
.top-nav, .central-nav, .bottom-nav{
  margin-left: 20px;
}

.top-nav img{
  width: 20px;
  margin-right: 10px;
  margin-bottom: 5px;
}
/* /Top Navbar */

/* Central Navbar */
.central-nav{
  overflow: hidden;
  margin-top: 15px;
}

.playlist-plus{
  padding-top: 10px;
}

.playlist-plus .fa-plus{
  font-size: 12px;
  color: #000;
  background-color: #D2D2D2;
  padding: 10px;
  margin: 10px 8px 10px 0px;
}

.fa-plus:hover{
  background-color: #fff;
}

.column{
  display: flex;
  flex-direction: column;
  margin-top: 10px;
  height: calc(100% - 59px);
  overflow-y: auto;
}

.column li{
  font-size: 14px;
  padding-bottom: 7px;
}
/* /Central Navbar */

/* Bottom Navbar */
.bottom-nav{
  margin-top: auto;
}

.bottom-nav .fa-arrow-circle-down,
.bottom-nav .fa-user{
  margin-right: 10px;
  font-size: 12px;
}

hr{
  margin: 5px 20px 5px 10px;
}

.bottom-nav .row:last-of-type{
  margin-bottom: 10px;
}
/* /Bottom Navbar */

/* Main Content */
.main-content{
  width: calc(100% - 200px);
  position: relative;
}
/* Banner */
.banner{
  display: flex;
  justify-content: flex-end;
  background-color: rgba(8, 11, 18, 0.5);
  position: absolute;
  width: 100%;
  z-index: 10;
}

.main-content .upgrade-btn{
  margin: 20px 5px;
  background-color: rgba(8, 11, 18, 0.5);
  border: 1px solid white;
  font-size: 10px;
  padding: 10px 20px;
  border-radius: 15px;
  transition: transform 0.5s;
}

.upgrade-btn:hover{
  transform: scale(1.05);
  cursor: pointer;
}
/* /Banner */

/* Inner-content */
.inner-content{
  padding-top: 80px;
  height: 100%;
  overflow-y: auto;
}

.categories{
  text-align: center;
  margin-top: 15px;
}

.categories li{
  padding: 8px;
  color: #7D7F84;
  font-weight: bold;
  display: inline-block;
}

.underline::after {
  content: "";
  display: block;
  width: 30px;
  height: 2px;
  background-color: #ADFF2F;
  margin: auto;
  margin-top: 2px;
}

.categories li:hover{
  color: #fff;
  cursor: pointer;
}

.container{
  margin-left: 10px;
  margin-top: 40px;
}

.container:first-of-type{
  margin-top: 20px;
}

.carousel{
  display: flex;
  margin-top: 15px;
}

.artist-box{
  width: calc((100% / 6) - 15px);
  text-align: center;
  margin-right: 15px;
}

.artist-album{
  width: 100%;
  position: relative;
  margin-bottom: 10px;
}

.artist-img{
  width: 100%;
  display: block;
}

.overlay{
  background-color: rgba(0, 0, 0, 0.5);
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0px;
  right: 0;
  display: none;
}

.overlay .fa-play-circle{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: #fff;
  font-size: 50px;
}

.artist-album:hover .overlay{
  display: block;
  cursor: pointer;
}

.container p{
  font-size: 10px;
  font-weight: bold;
  color: #7D7F84;
  margin-top: 5px;
}

/* 3rd Carousel  */
.circle-box.artist-box{
  width: 150px;
}

.artist-img.circle{
  width: 100%;
  border-radius: 100%;
}

.overlay.overlay-circle{
  border-radius: 100%;
}
/* /3rd Carousel  */

/* /Inner Content */
/* /Main Content */

/* Footer */
footer{
  height: 80px;
  background-color: #282828;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 12px;
  flex-wrap: wrap;
  position: relative;
}

.footer-left{
  display: flex;
  align-items: center;
  padding-left: 10px;
}

.footer-left img{
  width: 40px;
  margin-right: 10px;
}

.artist-playing{
  margin-right: 5px;
}

.like-save .fa-heart,
.like-save .fa-folder{
  font-size: 15px;
  color: #666666;
  padding: 5px;
}

.footer-left .fa-heart:hover,
.footer-left .fa-folder:hover{
  color: #fff;
}

.footer-left p:hover{
  text-decoration: underline;
  color: #fff;
}

.play-button a{
  font-size: 16px;
  padding: 10px;
}

footer .fa-play-circle:hover{
  transform: scale(1.3);
}

.play-bar{
  margin-top: 5px;
  display: flex;
  align-items: center;
}

.play-bar a{
  font-size: 10px;
  padding: 5px;
}

.bar{
  height: 4px;
  width: 100%;
  background-color: #fff;
  border-radius: 3px;
  position: relative;
  cursor: pointer;
}

.bar::after{
  content: "";
  width: 35%;
  background-color: #C1C1C1;
  border-radius: 3px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  transition: width 1s;
  transition-timing-function: linear;
}

.play-bar:hover .bar::after,
.volume:hover .bar::after{
  background-color: #ADFF2F;
  width: 100%;
}

.play-bar .fa-circle,
.volume .fa-circle{
  color: #fff;
  font-size: 18px;
  position: absolute;
  top: 0;
  left: 23%;
  transform: translateY(-43%);
  display: none;
  z-index: 10;
}

.play-bar:hover .fa-circle,
.volume:hover .fa-circle{
  display: block;
}

.play-bar .fa-circle,
.volume .fa-circle{
  animation-name: moving-circle;
  animation-duration: 1s;
}

@keyframes moving-circle {
  0%{
    top: 0px;
    left: 23%;
  }
  100%{
    top: 0px;
    left: 85%;
  }
}

.footer-right{
  display: flex;
  align-items: center;
  margin-right: 10px;
}

.footer-right a{
  padding: 5px;
}

.footer-right .bar{
  width: 60px;
}
/* /Footer */

/* Responsive da 70px <1100px */
@media screen and (max-width: 1100px){
  .inner-content .carousel{
    flex-wrap: wrap;
  }
  .carousel .artist-box{
    width: calc((100% / 4) - 20px);
    margin-bottom: 10px;
  }
  .column li{
    font-size: 12px;
  }
  .artist-box.circle-box{
    width: 150px;
  }
}
/* /Responsive da 700px <1100px */


/* Responsive da 600px <700px */
@media screen and (max-width: 700px){
  .carousel .artist-box{
    width: calc((100% / 2) - 20px);
  }
  .carousel:last-of-type{
    justify-content: space-around;
  }
  .artist-box.circle-box{
    width: 150px;
  }
}
/* Responsive da 600px <700px */

/* Responsive <600px */
@media screen and (max-width: 600px){
  aside{
    width: 45px;
  }
  .logo a:nth-child(even),
  .top-nav .row a:nth-child(even),
  .central-nav,
  .bottom-nav .row a:nth-child(even),
  .bottom-nav hr{
    display: none;
  }
  .logo .fa-spotify{
    font-size: 25px;
  }
  .top-nav{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-left: 0px;
  }
  .top-nav img{
    margin-right: 0px;
  }
  .bottom-nav{
    margin-left: 0px;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .main-content{
    width: calc(100% - 45px);
  }
  .main-content h2{
    font-size: 20px;
  }
  .inner-content li{
    font-size: 12px;
  }
  .inner-content .carousel{
    display: flex;
    flex-wrap: wrap;
  }
  .carousel .artist-box{
    width: 44%;
    padding-bottom: 10px;
  }
  .footer-left img{
    width: 30px;
    margin-right: 10px;
  }
  .like-save{
    display: flex;
    flex-direction: column;
  }
  .artist-playing{
    font-size: 10px;
    padding-right: 3px;
  }
  .artist-box.circle-box{
    width: 150px;
  }
  .like-save .fa-heart,
  .like-save .fa-folder{
    font-size: 10px;
    padding: 5px;
  }
.footer-central{
  display: flex;
  justify-content: center;
}
.play-button a{
  font-size: 13px;
  padding: 4px;
}
}
/* /Responsive <600px */

/* /Responsive <425px */
@media screen and (max-width: 425px){
  .volume .bar{
    display: none;
  }
}
/* /Responsive <425px */

